membuat variasi baru dari lightbox

--- a/lightbox.html
+++ b/lightbox.html
@@ -17,38 +17,60 @@
         <ul class="gallery">
             <li>
                 <a href="#gambar-1">
-                    <img src="img/thumbnail/captain-america2.png" alt="captain america">
+                    <img src="https://cdn-icons-png.flaticon.com/512/86/86492.png" alt="captain america">
                     <span>Captain America</span>
                 </a>
             </li>
-
-            <div class="overlay" id="gambar-1">
-
-                <a href="#" class="close">X</a>
-
-                <img src="img/thumbnail/captain-america.png" alt="">
+            <div class="license"><a href="https://www.flaticon.com/free-icons/marvel" title="marvel icons">Marvel icons
+                    created
+                    by Freepik - Flaticon</a>
+                <p>&copy2022 Alpinsil</p>
             </div>
-
+            <div class="overlay" id="gambar-1">
+                <a href="#" class="close">X CLOSE</a>
+                <img src="https://cdn-icons.flaticon.com/png/512/2234/premium/2234489.png?token=exp=1654088112~hmac=054103062510c9f82ab7bf700470a4cd"
+                    alt="">
+            </div>
             <li>
-                <a href="">
-                    <img src="img/thumbnail/iron-man.png" alt="iron-man">
+                <a href="#gambar-2">
+                    <img src="https://cdn-icons-png.flaticon.com/512/86/86494.png" alt="iron-man">
                     <span>Iron Man</span>
                 </a>
             </li>
+
+            <div class="overlay" id="gambar-2">
+                <a href="#" class="close">X CLOSE</a>
+                <img src="https://cdn.iconscout.com/icon/free/png-256/ironman-marvel-super-hero-earth-saver-avenger-28699.png"
+                    alt="">
+            </div>
             <li>
-                <a href="">
-                    <img src="img/thumbnail/spiderman.png" alt="Spiderman">
+                <a href="#gambar-3">
+                    <img src="https://cdn-icons-png.flaticon.com/512/86/86511.png" alt="Spiderman">
                     <span>Spiderman</span>
+
                 </a>
             </li>
+            <div class="overlay" id="gambar-3">
+                <a href="#" class="close">X CLOSE</a>
+                <img src="https://cdn-icons.flaticon.com/png/512/700/premium/700619.png?token=exp=1654087864~hmac=ef49325e0e19062b8351837d2e6f1e68"
+                    alt="">
+            </div>
             <li>
-                <a href="">
-                    <img src="img/thumbnail/thor.png" alt="Thor">
+                <a href="#gambar-4">
+                    <img src="https://cdn-icons.flaticon.com/png/512/4490/premium/4490983.png?token=exp=1654088316~hmac=8d7822a4a8785f89964c321d9215e624"
+                        alt="Thor">
                     <span>Thor</span>
                 </a>
             </li>
+            <div class="overlay" id="gambar-4">
+                <a href="#" class="close">X CLOSE</a>
+                <img src="https://cdn-icons.flaticon.com/png/512/4492/premium/4492698.png?token=exp=1654088356~hmac=8c924ff231d4a84a6f72f6efb751c052"
+                    alt="">
+            </div>
         </ul>
+
     </div>
+
 </body>
 
 </html>
