fix bug3 bug foto

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             </div>
             <div class="overlay" id="gambar-1">
                 <a href="#" class="close">X CLOSE</a>
-                <img src="https://cdn-icons.flaticon.com/png/512/2234/premium/2234489.png?token=exp=1654088112~hmac=054103062510c9f82ab7bf700470a4cd"
+                <img src="https://cdn-icons.flaticon.com/png/512/2234/premium/2234489.png?token=exp=1654161622~hmac=cb7d65e814573dfec1425554e5b542d6"
                     alt="">
             </div>
             <li>
@@ -40,7 +40,7 @@
 
             <div class="overlay" id="gambar-2">
                 <a href="#" class="close">X CLOSE</a>
-                <img src="https://cdn.iconscout.com/icon/free/png-256/ironman-marvel-super-hero-earth-saver-avenger-28699.png"
+                <img src="https://cdn4.iconfinder.com/data/icons/heroes-villains-vol-1-colored/100/Ironman_Mark_3-512.png"
                     alt="">
             </div>
             <li>
@@ -52,19 +52,19 @@
             </li>
             <div class="overlay" id="gambar-3">
                 <a href="#" class="close">X CLOSE</a>
-                <img src="https://cdn-icons.flaticon.com/png/512/700/premium/700619.png?token=exp=1654087864~hmac=ef49325e0e19062b8351837d2e6f1e68"
+                <img src="https://cdn-icons.flaticon.com/png/512/1610/premium/1610778.png?token=exp=1654161852~hmac=edbc138152614289e3d661267724acc5"
                     alt="">
             </div>
             <li>
                 <a href="#gambar-4">
-                    <img src="https://cdn-icons.flaticon.com/png/512/4490/premium/4490983.png?token=exp=1654088316~hmac=8d7822a4a8785f89964c321d9215e624"
+                    <img src="https://cdn-icons.flaticon.com/png/512/4490/premium/4490983.png?token=exp=1654161580~hmac=12e09c5c020c618ccbb785b4900b31b8"
                         alt="Thor">
                     <span>Thor</span>
                 </a>
             </li>
             <div class="overlay" id="gambar-4">
                 <a href="#" class="close">X CLOSE</a>
-                <img src="https://cdn-icons.flaticon.com/png/512/4492/premium/4492698.png?token=exp=1654088356~hmac=8c924ff231d4a84a6f72f6efb751c052"
+                <img src="https://cdn-icons.flaticon.com/png/512/4492/premium/4492698.png?token=exp=1654161913~hmac=6e821aa8eb0c3c232f3cd69315e85162"
                     alt="">
             </div>
         </ul>
