update thumbnail thor

--- a/index.html
+++ b/index.html
@@ -57,8 +57,7 @@
             </div>
             <li>
                 <a href="#gambar-4">
-                    <img src="https://cdn-icons.flaticon.com/png/512/4490/premium/4490983.png?token=exp=1654161580~hmac=12e09c5c020c618ccbb785b4900b31b8"
-                        alt="Thor">
+                    <img src="https://i.ibb.co/sWqMp9d/thor.png" alt="Thor">
                     <span>Thor</span>
                 </a>
             </li>
