--- a/index.html
+++ b/index.html
@@ -28,8 +28,10 @@
             </div>
             <div class="overlay" id="gambar-1">
                 <a href="#" class="close">X CLOSE</a>
+                <a href="#gambar-4" class="prev">prev</a>
                 <img src="https://cdn-icons.flaticon.com/png/512/2234/premium/2234489.png?token=exp=1654161622~hmac=cb7d65e814573dfec1425554e5b542d6"
                     alt="">
+                <a href="#gambar-2" class="next">next</a>
             </div>
             <li>
                 <a href="#gambar-2">
@@ -40,8 +42,10 @@
 
             <div class="overlay" id="gambar-2">
                 <a href="#" class="close">X CLOSE</a>
+                <a href="#gambar-1" class="prev">prev</a>
                 <img src="https://cdn4.iconfinder.com/data/icons/heroes-villains-vol-1-colored/100/Ironman_Mark_3-512.png"
                     alt="">
+                <a href="#gambar-3" class="next">next</a>
             </div>
             <li>
                 <a href="#gambar-3">
@@ -52,8 +56,10 @@
             </li>
             <div class="overlay" id="gambar-3">
                 <a href="#" class="close">X CLOSE</a>
+                <a href="#gambar-2" class="prev">prev</a>
                 <img src="https://cdn-icons.flaticon.com/png/512/1610/premium/1610778.png?token=exp=1654161852~hmac=edbc138152614289e3d661267724acc5"
                     alt="">
+                <a href="#gambar-4" class="next">next</a>
             </div>
             <li>
                 <a href="#gambar-4">
@@ -63,8 +69,10 @@
             </li>
             <div class="overlay" id="gambar-4">
                 <a href="#" class="close">X CLOSE</a>
+                <a href="#gambar-3" class="prev">prev</a>
                 <img src="https://cdn-icons.flaticon.com/png/512/4492/premium/4492698.png?token=exp=1654161913~hmac=6e821aa8eb0c3c232f3cd69315e85162"
                     alt="">
+                <a href="#gambar-1" class="next">next</a>
             </div>
         </ul>
 
